# NieletniPracuja

./: LICENSE
api/: .env  Cargo.toml  endpoints.txt  post_test.sh
api/.sqlx/: query-03d33db84502f17cc8aecf9fc16b1bcc76acea2c9a2864628b6c01a5eec4e734.json  query-5144eea2220a5300624c22b24b5407841a63a1c7b48e0064a6242aac6d3d0834.json  query-7df7d74986627a3c916dd367d81b091a4388a19eaa1c749fd510a628ac17aa6e.json  query-a4ff5e72be31351126c2542c109825ca03cd18a19c47a6e04e11c9cb9239d4b1.json  query-aa05fd29d6ee650cc0490b4fed79bba48eeb163bd12e502b6e3d1545e5b99eaa.json  query-ca6784624f3a4eb12a5ea1bf5df218090660e45b27597997e0e5743f52f5ec21.json
api/querys/: create_tables.pgsql
api/src/: auth.rs  error.rs  jobs.rs  main.rs  test.rs  users.rs
