[package]
name = "nieletni-pracuja-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.193",features = ["derive"]}
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3.6"
