[package]
name = "nieletni-pracuja-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.2.0"
parking_lot = "0.12.1"
serde = {version = "1.0.193",features = ["derive"]}
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
time = {version = "0.3.31", features = ["std", "serde"]}
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4", "v7"] }
warp = "0.3.6"
